react-routes-working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ body {
 }
 .about {
     background-image: url("../images/runner10.jpg");
+    background-position: 7% 4%;
 
 }
 
@@ -91,6 +92,7 @@ body {
     border-radius: 15px;
     margin-right: 50px;
     margin-left: 50px;
+    max-width: 20rem;
 }
 
 .card-header {
@@ -116,6 +118,7 @@ body {
 
     position: relative;
     float: left;
+    max-width:20rem;
     
 }
 
