--- a/react-testing/public/assets/css/style.css
+++ b/react-testing/public/assets/css/style.css
@@ -29,13 +29,26 @@ body {
 
 .title-about {
     position: relative;
+    bottom: 60px;
     text-align: left;
     font-weight: bold;
     color: white;
     text-shadow: 3px 3px 4px #000000;
+    font-size: 3.6em;
+}
+
+.display-3 {
+    position: relative;
+    bottom: 60px;
+    text-align: left;
+    font-weight: bold;
+    color: white;
+    text-shadow: 3px 3px 4px #000000;
+    font-size: 3.6em;
 }
 
 .jumbotron {
+
     background-position: 75% 40%;
     margin-left: 40px;
     margin-right: 40px;
@@ -50,17 +63,45 @@ body {
     background-image: url("../images/runner7.jpg");
 
 }
-.about {
-    background-image: url("../images/runner10.jpg");
 
+
+
+.about {
+    height: 100px;
+    width: 1300px;
+    margin:0 auto;
+    background-position: 75% 55%;
+    margin-bottom: 60px;
+
+    background-image: url("../images/runner10.jpg");
 }
 
 .contact {
+    height: 100px;
+    width: 1300px;
+    margin:0 auto;
+    margin-bottom: 60px;
+
+    background-position: 75% 50%;
     background-image: url("../images/runner9.jpg");
 
 }
 
+#contact-text {
+    text-align: justify;
+    font-weight: bold;
+    margin: auto;
+    width: 1300px;
+    color: white;
+    text-shadow: 3px 3px 4px #000000;
+}
+
 .login {
+    height: 100px;
+    width: 1300px;
+    margin:0 auto;
+    margin-bottom: 60px;
+    background-position: 75% 13%;
     background-image: url("../images/runner12.jpg");
 
 }
@@ -107,10 +148,11 @@ body {
 #lorem {
     text-align: justify;
     font-weight: bold;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: auto;
+    width: 1300px;
     color: white;
     text-shadow: 3px 3px 4px #000000;
+    
 }
 
 
@@ -183,6 +225,7 @@ body {
 .topnav {
     background-color: #008cba;
     overflow: hidden;
+    margin-bottom: 45px;
 }
 
 /* Style the links inside the navigation bar */
