--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,35 @@ body {
     background-image: linear-gradient(to bottom right, rgb(160, 55, 186), teal); 
    /*background-image: linear-gradient(to bottom right, rgb(63, 238, 230), rgb(252, 68, 69));*/ 
    /*background-image: linear-gradient(to bottom right,  rgb(252, 68, 69), rgb(63, 238, 230));*/
+   /* background-size: 100%;
+
+   background-position: center;
+   background-size: cover;
+   position: relative; */
+   /* -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; */
+  
+  background-attachment: fixed;
+  height: 100%;
+  background-repeat: no-repeat;
+
 }
 
 #foot3 {
     opacity: 1;
     background-color: coral;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 55x;
+
+}
+
+#extra {
+    visibility: hidden;
 }
 
 .standard-text {
@@ -27,13 +51,26 @@ body {
 
 .title-about {
     position: relative;
+    bottom: 60px;
     text-align: left;
     font-weight: bold;
     color: white;
     text-shadow: 3px 3px 4px #000000;
+    font-size: 3.6em;
+}
+
+.display-3 {
+    position: relative;
+    bottom: 60px;
+    text-align: left;
+    font-weight: bold;
+    color: white;
+    text-shadow: 3px 3px 4px #000000;
+    font-size: 3.6em;
 }
 
 .jumbotron {
+
     background-position: 75% 40%;
     margin-left: 40px;
     margin-right: 40px;
@@ -48,18 +85,45 @@ body {
     background-image: url("../images/runner7.jpg");
 
 }
-.about {
-    background-image: url("../images/runner10.jpg");
-    background-position: 7% 4%;
 
+
+
+.about {
+    height: 100px;
+    width: 90vw;
+    margin:0 auto;
+    background-position: 75% 55%;
+    margin-bottom: 60px;
+
+    background-image: url("../images/runner10.jpg");
 }
 
 .contact {
+    height: 100px;
+    width: 90vw;
+    margin:0 auto;
+    margin-bottom: 60px;
+
+    background-position: 75% 50%;
     background-image: url("../images/runner9.jpg");
 
 }
 
+#contact-text {
+    text-align: justify;
+    font-weight: bold;
+    margin: auto;
+    width: 1300px;
+    color: white;
+    text-shadow: 3px 3px 4px #000000;
+}
+
 .login {
+    height: 100px;
+    width: 90vw;
+    margin:0 auto;
+    margin-bottom: 60px;
+    background-position: 75% 13%;
     background-image: url("../images/runner12.jpg");
 
 }
@@ -69,11 +133,44 @@ body {
 
 }
 
+.journal {
+    background-color: #659EBC;
+}
+
 #learn-button {
     border-radius: 10px;
     background-color: rgb(49, 184, 214);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
+}
+#journal-button {
+    border-radius: 10px;
+    background-color: rgb(49, 184, 214);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+#signup-button {
+
+    border-radius: 10px;
+    background-color: rgb(49, 184, 214);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 20px;
+}
+
+#login-button {
+
+    border-radius: 10px;
+    background-color: rgb(49, 184, 214);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 20px;
+
+}
+
+#journal-entry {
+
+    width: 600px;
+    height: 200px;
 }
 
 .container {
@@ -92,7 +189,6 @@ body {
     border-radius: 15px;
     margin-right: 50px;
     margin-left: 50px;
-    max-width: 20rem;
 }
 
 .card-header {
@@ -107,10 +203,11 @@ body {
 #lorem {
     text-align: justify;
     font-weight: bold;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: auto;
+    width: 90vw;
     color: white;
     text-shadow: 3px 3px 4px #000000;
+    
 }
 
 
@@ -118,7 +215,6 @@ body {
 
     position: relative;
     float: left;
-    max-width:20rem;
     
 }
 
@@ -151,11 +247,13 @@ body {
 
 }
 
-#lineChart {
-    background-color: white;
-    opacity: 1.0;
+#chart {
+     width: 400px;
 }
 
+#lineChart {
+
+}
 
 #calendar {
     position: relative;
@@ -167,6 +265,15 @@ body {
 
 
 
+.hidden-element {
+    visibility: hidden;
+}
+
+
+.recharts-surface {
+    background-color: white;
+}
+
 /*------------------ Experimental Navbar------------*/
 
 
@@ -174,6 +281,7 @@ body {
 .topnav {
     background-color: #008cba;
     overflow: hidden;
+    margin-bottom: 45px;
 }
 
 /* Style the links inside the navigation bar */
