--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,11 +21,11 @@ body {
 #foot3 {
     opacity: 1;
     background-color: coral;
-    position: fixed;
+    /* position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 55x;
+    height: 55x; */
 
 }
 
